[package]
name = "mbase"
version = "0.1.0"
authors = ["Ivan Schuetz <ivanschuetz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# algonaut = { git = "https://github.com/manuelmauro/algonaut", branch = "main", features = ["rustls"], default-features = false }
algonaut = { path = "../../../algonaut", features = ["rustls"], default-features = false }

anyhow = "1.0"
rmp-serde = "1.0.0"
# serde_json = "1.0.40"
serde = {version = "1.0", features = ["derive"]}
data-encoding = "2.3.1"
# tealdbg = { git = "https://github.com/ivanschuetz/tealdbg_launcher", features = ["rustls"], default-features = false }
tealdbg = { path = "../../../tealdbg_launcher", features = ["rustls"], default-features = false }

log = "0.4"

# std::Instant::now() panics on WASM https://github.com/sebcrozet/instant
# working config from here (first 2 posts): https://github.com/sebcrozet/instant/issues/1
instant = { version = "0.1", features = [ "now", "wasm-bindgen" ] }
chrono = { version = "0.4.19", features = ["serde"] }

rust_decimal = "1.15"

sha2 = "0.10.1"
futures = "0.3.19"
url = "2.2.2"
urlencoding = "2.0.0"
reqwest = { version = "0.11.10", features = ["rustls-tls"], default-features = false }
async-trait = "0.1.51"

[target.'cfg(not(wasm))'.dev-dependencies]
serial_test = "0.5.1"
tokio = { version = "1.6.0", features = ["rt-multi-thread", "macros"] }
dotenv = "0.15.0"
